--- a/test-output/index.html
+++ b/test-output/index.html
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-Test">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Test" title="com.usa.my.runner.RunCucumberTest" class="method navigator-link" hash-for-method="feature(User able use zoopla application, login the application, searching the property, buy the property)">feature(User able use zoopla application, login the application, searching the property, buy the property)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Test" title="com.usa.my.runner.MyRunner" class="method navigator-link" hash-for-method="feature(User able use zoopla application, login the application, searching the property, buy the property)">feature(User able use zoopla application, login the application, searching the property, buy the property)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Test -->
@@ -122,7 +122,7 @@
           <div class="suite-Test-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.usa.my.runner.RunCucumberTest</span>
+              <span class="class-name">com.usa.my.runner.MyRunner</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
@@ -149,7 +149,7 @@
 &lt;suite name=&quot;Test&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Tutorialspoint&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.usa.my.runner.RunCucumberTest&quot;/&gt;
+      &lt;class name=&quot;com.usa.my.runner.MyRunner&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Tutorialspoint --&gt;
 &lt;/suite&gt; &lt;!-- Test --&gt;
@@ -200,13 +200,13 @@ data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'feature')
-data.setCell(0, 2, 'com.usa.my.runner.RunCucumberTest')
-data.setCell(0, 3, 13);
+data.setCell(0, 2, 'com.usa.my.runner.MyRunner')
+data.setCell(0, 3, 9438);
 window.suiteTableData['Test']= { tableData: data, tableDiv: 'times-div-Test'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 13 ms</span>
+              <span class="suite-total-time">Total running time: 9 seconds</span>
               <div id="times-div-Test">
               </div> <!-- times-div-Test -->
             </div> <!-- times-div -->
@@ -232,18 +232,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.usa.my.runner.RunCucumberTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.usa.my.runner.MyRunner</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setUpClass</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">feature(User able use zoopla application, login the application, searching the property, buy the property)</span>
-                <span class="method-start">567 ms</span>
+                <span class="method-start">526 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDownClass</span>
-                <span class="method-start">586 ms</span>
+                <span class="method-start">9975 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
