--- a/test-output/old/Test/methods.html
+++ b/test-output/old/Test/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Test</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="dc9a9f">  <td>22/03/20 21:54:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass()[pri:0, instance:com.usa.my.runner.RunCucumberTest@2f67a4d3]">&gt;&gt;setUpClass</td> 
+<tr bgcolor="dc9a9f">  <td>22/03/22 20:44:07</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass()[pri:0, instance:com.usa.my.runner.MyRunner@2f67a4d3]">&gt;&gt;setUpClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1595938139</td>   <td></td> </tr>
-<tr bgcolor="dc9a9f">  <td>22/03/20 21:54:47</td>   <td>576</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:com.usa.my.runner.RunCucumberTest@2f67a4d3]">&lt;&lt;tearDownClass</td> 
+<tr bgcolor="dc9a9f">  <td>22/03/22 20:44:17</td>   <td>9971</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:com.usa.my.runner.MyRunner@2f67a4d3]">&lt;&lt;tearDownClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1595938139</td>   <td></td> </tr>
-<tr bgcolor="dc9a9f">  <td>22/03/20 21:54:47</td>   <td>557</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.usa.my.runner.RunCucumberTest@2f67a4d3]">feature</td> 
+<tr bgcolor="dc9a9f">  <td>22/03/22 20:44:08</td>   <td>522</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.usa.my.runner.MyRunner@2f67a4d3]">feature</td> 
   <td>main@1595938139</td>   <td></td> </tr>
 </table>
