--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bfa075">  <td>22/03/20 21:43:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass()[pri:0, instance:com.usa.my.runner.RunCucumberTest@53fe15ff]">&gt;&gt;setUpClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1947185929</td>   <td></td> </tr>
-<tr bgcolor="bfa075">  <td>22/03/20 21:43:42</td>   <td>609</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:com.usa.my.runner.RunCucumberTest@53fe15ff]">runScenario</td> 
-  <td>main@1947185929</td>   <td></td> </tr>
-<tr bgcolor="bfa075">  <td>22/03/20 21:43:43</td>   <td>914</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:com.usa.my.runner.RunCucumberTest@53fe15ff]">&lt;&lt;tearDownClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1947185929</td>   <td></td> </tr>
+<tr bgcolor="699dd3">  <td>22/03/27 19:19:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="List_Interface.getArrayList()[pri:0, instance:com.usa.collections.List_Interface@5fb759d6]">getArrayList</td> 
+  <td>main@515809288</td>   <td></td> </tr>
 </table>
