--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,6 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="699dd3">  <td>22/03/27 19:19:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="List_Interface.getArrayList()[pri:0, instance:com.usa.collections.List_Interface@5fb759d6]">getArrayList</td> 
-  <td>main@515809288</td>   <td></td> </tr>
+<tr bgcolor="699dd3">  <td>22/04/03 13:06:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RemoveDuplicates.getCompareData()[pri:0, instance:coding.challenges.RemoveDuplicates@15888343]">getCompareData</td> 
+  <td>main@2030411960</td>   <td></td> </tr>
 </table>
