--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,16 +8,11 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">6</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">76</td><td></td><td></td></tr>
+<tr><th colspan="8">Test</th></tr>
+<tr><td><a href="#t0">Tutorialspoint</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">14,599</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="6">coding.challenges.RemoveDuplicates</td><td><a href="#m0">getBreakWords</a></td><td rowspan="1">1649006303033</td><td rowspan="1">7</td></tr><tr class="passedeven"><td><a href="#m1">getCompareData</a></td><td rowspan="1">1649006303042</td><td rowspan="1">9</td></tr><tr class="passedeven"><td><a href="#m2">getConvertDataType</a></td><td rowspan="1">1649006303054</td><td rowspan="1">2</td></tr><tr class="passedeven"><td><a href="#m3">getFindOutDuplicateFromStrings</a></td><td rowspan="1">1649006303058</td><td rowspan="1">3</td></tr><tr class="passedeven"><td><a href="#m4">getReveresString</a></td><td rowspan="1">1649006303063</td><td rowspan="1">2</td></tr><tr class="passedeven"><td><a href="#m5">getSecondHighestNumber</a></td><td rowspan="1">1649006303068</td><td rowspan="1">2</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Test</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Tutorialspoint &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.usa.my.runner.MyRunner</td><td><a href="#m0">feature</a></td><td rowspan="1">1649606643379</td><td rowspan="1">13770</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">coding.challenges.RemoveDuplicates#getBreakWords</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">coding.challenges.RemoveDuplicates#getCompareData</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">coding.challenges.RemoveDuplicates#getConvertDataType</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">coding.challenges.RemoveDuplicates#getFindOutDuplicateFromStrings</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">coding.challenges.RemoveDuplicates#getReveresString</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">coding.challenges.RemoveDuplicates#getSecondHighestNumber</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Tutorialspoint</h2><h3 id="m0">com.usa.my.runner.MyRunner#feature</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>User able use zoopla application, login the application, searching the property, buy the property</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
