--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,16 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="699dd3">  <td>22/04/03 13:18:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RemoveDuplicates.getBreakWords()[pri:0, instance:coding.challenges.RemoveDuplicates@15888343]">getBreakWords</td> 
-  <td>main@1822525972</td>   <td></td> </tr>
-<tr bgcolor="699dd3">  <td>22/04/03 13:18:23</td>   <td>10</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RemoveDuplicates.getCompareData()[pri:0, instance:coding.challenges.RemoveDuplicates@15888343]">getCompareData</td> 
-  <td>main@1822525972</td>   <td></td> </tr>
-<tr bgcolor="699dd3">  <td>22/04/03 13:18:23</td>   <td>22</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RemoveDuplicates.getConvertDataType()[pri:0, instance:coding.challenges.RemoveDuplicates@15888343]">getConvertDataType</td> 
-  <td>main@1822525972</td>   <td></td> </tr>
-<tr bgcolor="699dd3">  <td>22/04/03 13:18:23</td>   <td>26</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RemoveDuplicates.getFindOutDuplicateFromStrings()[pri:0, instance:coding.challenges.RemoveDuplicates@15888343]">getFindOutDuplicateFromStrings</td> 
-  <td>main@1822525972</td>   <td></td> </tr>
-<tr bgcolor="699dd3">  <td>22/04/03 13:18:23</td>   <td>31</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RemoveDuplicates.getReveresString()[pri:0, instance:coding.challenges.RemoveDuplicates@15888343]">getReveresString</td> 
-  <td>main@1822525972</td>   <td></td> </tr>
-<tr bgcolor="699dd3">  <td>22/04/03 13:18:23</td>   <td>36</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RemoveDuplicates.getSecondHighestNumber()[pri:0, instance:coding.challenges.RemoveDuplicates@15888343]">getSecondHighestNumber</td> 
-  <td>main@1822525972</td>   <td></td> </tr>
+<tr bgcolor="699dd3">  <td>22/04/05 13:11:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RemoveDuplicates.getRev()[pri:0, instance:coding.challenges.RemoveDuplicates@33ecda92]">getRev</td> 
+  <td>main@899929247</td>   <td></td> </tr>
 </table>
