UPdate new class

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-Test">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Test" title="com.usa.my.runner.MyRunner" class="method navigator-link" hash-for-method="feature(User able use zoopla application, login the application, searching the property, buy the property)">feature(User able use zoopla application, login the application, searching the property, buy the property)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Test" title="com.usa.my.runner.MyRunner" class="method navigator-link" hash-for-method="feature(User can search the properties, select the property, buy the property,)">feature(User can search the properties, select the property, buy the property,)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Test -->
@@ -127,10 +127,10 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="feature(User able use zoopla application, login the application, searching the property, buy the property)">
-                  </a> <!-- feature(User able use zoopla application, login the application, searching the property, buy the property) -->
+                  <a name="feature(User can search the properties, select the property, buy the property,)">
+                  </a> <!-- feature(User can search the properties, select the property, buy the property,) -->
                   <span class="method-name">feature</span>
-                  <span class="parameters">(User able use zoopla application, login the application, searching the property, buy the property)</span>
+                  <span class="parameters">(User can search the properties, select the property, buy the property,)</span>
                   <em>
 (Runs Cucumber Feature)                  </em>
                 </div> <!-- method-content -->
@@ -201,12 +201,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'feature')
 data.setCell(0, 2, 'com.usa.my.runner.MyRunner')
-data.setCell(0, 3, 13770);
+data.setCell(0, 3, 10851);
 window.suiteTableData['Test']= { tableData: data, tableDiv: 'times-div-Test'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 13 seconds</span>
+              <span class="suite-total-time">Total running time: 10 seconds</span>
               <div id="times-div-Test">
               </div> <!-- times-div-Test -->
             </div> <!-- times-div -->
@@ -238,12 +238,12 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">feature(User able use zoopla application, login the application, searching the property, buy the property)</span>
-                <span class="method-start">762 ms</span>
+                <span class="method-name">feature(User can search the properties, select the property, buy the property,)</span>
+                <span class="method-start">567 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDownClass</span>
-                <span class="method-start">14537 ms</span>
+                <span class="method-start">11423 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
